<resources>
    <string name="app_name">Taskmaster</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_registered">Don\'t have an account yet?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="already_registered">Already registered?</string>
</resources>
